--- a/index.html
+++ b/index.html
@@ -38,22 +38,22 @@
        <div class="row">
            <div class="col-md-4">
                <div class="row">
-                   <div class="col-md-6"><img src="m-1.jpg"></div>
-                   <div class="col-md-6"><img src="m-2.jpg"></div>
+                   <div class="col-6"><img src="m-1.jpg"></div>
+                   <div class="col-6"><img src="m-2.jpg"></div>
             　 </div>
             </div>
     
             <div class="col-md-4">
                 <div class="row">            
-                    <div class="col-md-6"><img src="m-5.jpg"></div>
-                    <div class="col-md-6"><img src="m-6.jpg"></div>
+                    <div class="col-6"><img src="m-5.jpg"></div>
+                    <div class="col-6"><img src="m-6.jpg"></div>
                 </div>
             </div>
 
             <div class="col-md-4">
                 <div class="row">            
-                    <div class="col-md-6"><img src="m-3.jpg"></div>
-                    <div class="col-md-6"><img src="m-4.jpg"></div>
+                    <div class="col-6"><img src="m-3.jpg"></div>
+                    <div class="col-6"><img src="m-4.jpg"></div>
                 </div>
             </div>
 
